--- a/Validacion/principal.css
+++ b/Validacion/principal.css
@@ -1,17 +1,18 @@
 input,
 textarea {
-	padding: 5px;
-	color: #fff;
+  padding: 5px;
+  color: #fff;
 }
 
-;;placeholder {
-	color: darkseagreen;
+::placeholder {
+  color: darkred;
 }
 
-;is(input, textarea):invalid {
-	background: red;
+:is(input, textarea):invalid {
+  background: red;
+  color: #fff;
 }
 
-;is(input, textarea):invalid {
-	background: green;
+:is(input, textarea):valid {
+  background: green;
 }
